--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/mongodb-odm": "1.0.*@dev",
         "doctrine/mongodb-odm-bundle": "3.0.*@dev",
-        "vich/uploader-bundle": "^0.14.0"
+        "knplabs/knp-gaufrette-bundle": "*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
