--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,5 @@
 jahller_artlas:
     resource: "@JahllerArtlasBundle/Resources/config/routing.yml"
-    prefix:   /
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
