--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/mongodb-odm": "1.0.*@dev",
         "doctrine/mongodb-odm-bundle": "3.0.*@dev",
-        "knplabs/knp-gaufrette-bundle": "*@dev"
+        "knplabs/knp-gaufrette-bundle": "*@dev",
+        "friendsofsymfony/jsrouting-bundle": "1.5.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
