--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,16 @@
         "symfony/swiftmailer-bundle": "~2.3",
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~4.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
+        "sensio/framework-extra-bundle": "^3.0",
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/mongodb-odm": "1.0.*@dev",
         "doctrine/mongodb-odm-bundle": "3.0.*@dev",
+        "gedmo/doctrine-extensions": "2.4.7",
+        "stof/doctrine-extensions-bundle": "1.2.1",
         "knplabs/knp-gaufrette-bundle": "*@dev",
-        "friendsofsymfony/jsrouting-bundle": "1.5.4"
+        "friendsofsymfony/jsrouting-bundle": "1.5.4",
+        "jms/serializer-bundle": "^1.0",
+        "friendsofsymfony/rest-bundle": "^1.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
